// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portable - artifactName and request execution level 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßWPortable.1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
    },
  ],
}
`;

exports[`portable - splashImage 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßWPortable.1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
    },
  ],
}
`;

exports[`portable 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
    },
  ],
}
`;

exports[`portable zip 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
    },
  ],
}
`;

exports[`portable zip several archs 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW 1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
    },
  ],
}
`;
